# ImageTransient

./: CMakeLists.txt  README.md  aur.sh  build-arch.sh  install.sh
packaging/: io.github.remisa.imagetransient.desktop
scripts/: _install-common.sh  build-linux.sh  install-alpine.sh  install-arch.sh  install-debian-ubuntu.sh  install-fedora.sh  install-opensuse.sh
src/: main.cpp
